--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @charset "utf-8";
+
 * {
     margin: 0;
     padding: 0;
 }
 html{
   scroll-behavior: smooth;
-  scroll-padding-top:60px;
+  scroll-padding-top:70px;
     
 }
-
 
 img {
     vertical-align: bottom
@@ -19,8 +19,7 @@ body {
     font-style: normal;
     line-height: 1.9;
     box-sizing: border-box;
-    background-image: url(img/haikei4.jpg);
-    background-size: 100px 100px;
+    background-color: #E4EBF2;
 }
 
 main {
@@ -29,7 +28,7 @@ main {
     padding: 80px 20px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #E4EBF2;
+    /* [disabled]background-color: #E4EBF2; */
 }
 h1 {
 	font-size: 20px;
@@ -49,10 +48,7 @@ h2 {
     color: rgba(255,255,255,1.00);
   display: inline-block;
   padding:3px 20px;
-  border-width: 0px;
-  border-style: solid;
-  border-top-right-radius: 30px;
-  border-bottom-left-radius: 22px;
+  border-radius:20px;
   margin:20px 0px; 
 }
 .h2{
@@ -91,17 +87,20 @@ h4{
 }
 
 header{
-  width:100%;
+  width:90%;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+    border-radius: 30px;
   position: fixed;
   z-index: 1;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 5%;
   background-color: rgba(255,255,255,0.89);
+  box-shadow: 0px 2px 5px rgba(147,147,147,0.54);
 }
+
 
 nav {
 margin-right: 30px;
@@ -273,8 +272,8 @@ h1 a figure img {
 
 
 .view a:hover{
- background-color: #C6C6C6;
-  color:  #3E6E8C;
+ background-color:#3E6E8C;
+  color:  #fff;
 }
 nav a:hover{
     color:  #3E6E8C;
@@ -302,7 +301,6 @@ transition: 0.5s;
 }
 .sec_port img:hover{
     transition: 0.5s;
-   /* box-shadow: 6px 6px 5px #8E8E8E;*/
   transform: scale(1.04);
 
 }
@@ -336,11 +334,146 @@ h1 a{
     text-decoration: none;
 }
 
-/*ここからSUBページ*/
-#sub .works_img,.works_img_x,.works_img_y {
-    display: block;
-  margin:10px auto;
+
+
+
+.area{
+    width: 100%;
+    height:100vh;
     
+    
+   
+}
+
+.circles{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+    
+}
+
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: #f2c2c2;
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+    
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+	   background: #fff;
+}
+
+
+.circles li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+	   background: #fff;
+}
+
+
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
+}
+
+
+
+Resources
+
+
+
+/*ここからSUBページ*/
+
+.works_img,.works_img_x,.works_img_y{
+    /* [disabled]display:block; */
 }
 #sub dl {
   margin: 30px 30px 0;
@@ -364,12 +497,15 @@ h1 a{
 }
 .works_img{
     width:300px;
+     margin:10px auto;
 }
 .works_img_x{
     width:500px;
+     margin:10px auto;
 }
 .works_img_y{
-    width:350px;
+    width:300px;
+     margin:10px auto;
 }
 #sub p img{
     width:100%;
@@ -517,8 +653,10 @@ nav li::after {
   .nav-button{
     visibility: visible;
     opacity: 1;
+      margin-right:8px;
 
   }
+
 .view {
     padding-bottom: 30px;
 }
