--- a/style.css
+++ b/style.css
@@ -1,69 +1,62 @@
 @charset "utf-8";
-
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-html{
+html {
   scroll-behavior: smooth;
-  scroll-padding-top:70px;
-    
+  scroll-padding-top: 70px;
 }
-
 img {
-    vertical-align: bottom
+  vertical-align: bottom
 }
 body {
-    font-family: "Zen Maru Gothic", serif;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 1.9;
-    box-sizing: border-box;
-    background-color: #E4EBF2;
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.9;
+  box-sizing: border-box;
+  background-color: #E4EBF2;
 }
-
 main {
-    width: 90%;
-    max-width: 1150px;
-    padding: 80px 20px;
-    margin-left: auto;
-    margin-right: auto;
-    /* [disabled]background-color: #E4EBF2; */
+  width: 90%;
+  max-width: 1150px;
+  padding: 80px 20px;
+  margin-left: auto;
+  margin-right: auto;
+  /* [disabled]background-color: #E4EBF2; */
 }
 h1 {
-	font-size: 20px;
-	font-weight: normal;
-	margin: 0px 30px;
+  font-size: 20px;
+  font-weight: normal;
+  margin: 0px 30px;
 }
 h1 a .flex {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
-
 h2 {
   font-weight: nomal;
   font-size: 20px;
   text-align: center;
   background-color: #3E6E8C;
-    color: rgba(255,255,255,1.00);
+  color: rgba(255, 255, 255, 1.00);
   display: inline-block;
-  padding:3px 20px;
-  border-radius:20px;
-  margin:20px 0px; 
+  padding: 3px 20px;
+  border-radius: 20px;
+  margin: 20px 0px;
 }
-.h2{
+.h2 {
   text-align: center;
 }
-
 h3 {
-	font-size: 18px;
-	margin-bottom: 30px;
-	position: relative;
-	display: inline-block;
-	padding: 0 55px;
+  font-size: 18px;
+  margin-bottom: 20px;
+  position: relative;
+  display: inline-block;
+  padding: 0 55px;
 }
 /*h３装飾*/
-
 h3:before, h3:after {
   content: '';
   position: absolute;
@@ -75,216 +68,208 @@ h3:before, h3:after {
   border-bottom: solid 1px #F2C2C2;
 }
 h3:before {
-  left:0;
+  left: 0;
 }
 h3:after {
   right: 0;
 }
-h4{
+h4 {
   text-align: center;
   margin: 20px;
   font-size: 20px;
 }
-
-header{
-  width:90%;
+header {
+  width: 90%;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-    border-radius: 30px;
+  border-radius: 30px;
   position: fixed;
   z-index: 1;
   top: 10px;
   left: 5%;
-  background-color: rgba(255,255,255,0.89);
-  box-shadow: 0px 2px 5px rgba(147,147,147,0.54);
+  background-color: rgba(255, 255, 255, 0.89);
+  box-shadow: 0px 2px 5px rgba(147, 147, 147, 0.54);
 }
-
-
 nav {
-margin-right: 30px;
+  margin-right: 30px;
 }
+.tools {
+	text-align: center;
+	background-color: rgba(255,255,255,0.64);
+	border-radius: 20px;
+}
+.profile2 div p {
+	margin-bottom: 15px;
+}
+
+
 header nav ul {
-    display: flex;
-    font-size: 20px;
-    line-height: 1;
+  display: flex;
+  font-size: 20px;
+  line-height: 1;
 }
 nav li a {
-    padding: 0 20px;
-   color: #000000;
-    text-decoration: none;
+  padding: 0 20px;
+  color: #000000;
+  text-decoration: none;
 }
 nav li::after {
-    content: "|";
+  content: "|";
 }
 nav li:last-child::after {
-    content: none;
+  content: none;
 }
 nav li {
   position: relative;
 }
-
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 .nav-button span {
-  height: 3px; 
-  background-color: rgba(116,116,116,1.00);
+  height: 3px;
+  background-color: rgba(116, 116, 116, 1.00);
   position: absolute;
   right: 10px;
   transition: 0.5s;
-  
 }
 .nav-button {
-	width: 40px;
-	height: 40px;
-	margin-left: auto;
-	position: relative;
-	cursor: pointer;
-	z-index: 2;
-	visibility: hidden;
-	opacity: 0;
-	background-color: rgba(255,255,255,1.00);
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  position: relative;
+  cursor: pointer;
+  z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  background-color: rgba(255, 255, 255, 1.00);
 }
-
 .nav-button span:nth-child(1) {
-  width:35px;
+  width: 35px;
   top: 12px;
 }
 .nav-button span:nth-child(2) {
-  width:44px;
+  width: 44px;
   top: 23px;
 }
 .nav-button span:nth-child(3) {
-  width:30px;
+  width: 30px;
   top: 34px;
 }
 .nav-open .nav-button span:nth-child(1) {
   top: 17px;
-  transform: rotate(315deg)
+  transform: rotate(315deg);
+	      right: -30px;
 }
 .nav-open .nav-button span:nth-child(2) {
-  width:0;
-  left:50%;
+  width: 0;
+  left: 50%;
 }
 .nav-open .nav-button span:nth-child(3) {
   top: 17px;
-	width:35px;
-  transform:rotate(-315deg)
+  width: 35px;
+	    right: -30px;
+  transform: rotate(-315deg);
 }
 
 .top_img {
-  width:30%;
+  width: 30%;
   max-width: 350px;
-  margin-top:40px;
-
+  margin-top: 40px;
 }
-.top_img img{
+.top_img img {
   width: 100%;
   height: auto;
   border-radius: 33px;
-
 }
 .sec_profile {
-  width:100%;
+  width: 100%;
 }
-.profile1,.profile2{
-	display: flex;
-	justify-content: space-around;
-	margin-bottom: 60px;
+.profile1, .profile2 {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 60px;
 }
-.plo1_text{
+.plo1_text {
   width: 50%;
   margin-top: 50px;
   text-align: center;
   font-size: 18px;
 }
-.profile2 div{
+.profile2 div {
   width: 30%;
 }
-
-
-
- .sec_port ul {
+.sec_port ul {
   padding-top: 30px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   margin-bottom: 40px;
 }
-.sec_port li{
-	margin-bottom: 50px;
-	overflow: hidden;
-	border-radius: 10px;
-	width: 350px;
+.sec_port li {
+  margin-bottom: 50px;
+  overflow: hidden;
+  border-radius: 10px;
+  width: 300px;
 }
-.sec_port li img{
+.sec_port li img {
   width: 100%;
   height: auto;
 }
-
-.sec_port{
-    text-align: center;
+.sec_port {
+  text-align: center;
 }
-.diary{
+.diary {
   overflow-y: auto;
   height: 300px;
   padding: 30px 50px;
-  background-color: rgba(133,179,241,0.36);
+  background-color: rgba(133, 179, 241, 0.36);
   border-radius: 30px;
   font-size: 16px;
 }
-
-.diary dd{
+.diary dd {
   margin-bottom: 1em;
 }
-.sec_contact{
+.sec_contact {
   text-align: center;
   margin: 50px;
 }
-.view{
-	text-align: right;
-	font-size: 22px;
-	margin-top: -30px;
+.view {
+  text-align: right;
+  font-size: 22px;
+  margin-top: -30px;
 }
-.view a{
-	color: rgba(0,0,0,1.00);
-	padding:10px 20px;
-	display: inline-block;
-	font-size: 20px;
-	margin-right: 70px;
-	text-decoration: none;
-	border-radius: 30px;
-	transition: 0.4s;
-	border: 2px solid  #3E6E8C;
+.view a {
+  color: rgba(0, 0, 0, 1.00);
+  padding: 10px 20px;
+  display: inline-block;
+  font-size: 20px;
+  margin-right: 70px;
+  text-decoration: none;
+  border-radius: 30px;
+  transition: 0.4s;
+  border: 2px solid #3E6E8C;
 }
 h1 a figure {
-	width: 40px;
-	padding-right: 10px;
+  width: 40px;
+  padding-right: 10px;
 }
 h1 a figure img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
-
-
-
-
-.view a:hover{
- background-color:#3E6E8C;
-  color:  #fff;
+.view a:hover {
+  background-color: #3E6E8C;
+  color: #fff;
 }
-nav a:hover{
-    color:  #3E6E8C;
-    transition: 0.3s;
-
-
+nav a:hover {
+  color: #3E6E8C;
+  transition: 0.3s;
 }
- nav a:hover::before {
+nav a:hover::before {
   content: "";
   width: 100%;
-
 }
 nav a::before {
   content: "";
@@ -292,22 +277,18 @@ nav a::before {
   height: 2px;
   background-color: #F2C2C2;
   position: absolute;
-  left:0;
+  left: 0;
   bottom: -10px;
-transition: 0.5s;
+  transition: 0.5s;
 }
-.sec_port img{
-    border-radius: 15px;
+.sec_port img {
+  border-radius: 15px;
 }
-.sec_port img:hover{
-    transition: 0.5s;
+.sec_port img:hover {
+  transition: 0.5s;
   transform: scale(1.04);
-
 }
-
-
-
-.pagetop{
+.pagetop {
   background-color: #F2C2C2;
   border-radius: 50% 30% 30% 60%;
   padding: 30px;
@@ -317,206 +298,169 @@ transition: 0.5s;
   display: none;
   opacity: 0.8;
   transition: 0.5s;
-       color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
-.pagetop:hover{
+.pagetop:hover {
   opacity: 1;
   transform: rotateY(360deg);
 }
-footer{
+footer {
   text-align: center;
   padding: 50px;
-  background-color: rgba(255,255,255,1.00);
+  background-color: rgba(255, 255, 255, 1.00);
 }
-h1 a{
-   color: #000000;
-    text-decoration: none;
+h1 a {
+  color: #000000;
+  text-decoration: none;
 }
-
-
-
-
-.area{
-    width: 100%;
-    height:100vh;
-    
-    
-   
+.area {
+  width: 100%;
+  height: 100vh;
 }
-
-.circles{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-    
+.circles {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
 }
-
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: #f2c2c2;
-    animation: animate 25s linear infinite;
-    bottom: -150px;
-    
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: #f2c2c2;
+  animation: animate 25s linear infinite;
+  bottom: -150px;
 }
-
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-	   background: #fff;
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+  background: #fff;
 }
-
-
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
 }
-
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
 }
-
-.circles li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
-    animation-duration: 18s;
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
 }
-
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
 }
-
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
 }
-
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
 }
-
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-    animation-duration: 45s;
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
 }
-
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
 }
-
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-	   background: #fff;
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+  background: #fff;
 }
-
-
-
 @keyframes animate {
-
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
-    }
-
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    }
-
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
 }
-
-
-
-Resources
-
-
-
-/*ここからSUBページ*/
-
-.works_img,.works_img_x,.works_img_y{
-    /* [disabled]display:block; */
+Resources /*ここからSUBページ*/
+.works_img, .works_img_x, .works_img_y {
+  /* [disabled]display:block; */
 }
 #sub dl {
   margin: 30px 30px 0;
-     display: flex;
+  display: flex;
   flex-wrap: wrap;
 }
-#sub dl dt{
-    width: 20%;
-    text-align: left;
-    padding-left: 1.3em;
-    background-image: url("img/pow-solid2.svg");
-    background-repeat: no-repeat;
-    background-position: left 5px;
-    background-size: 1.2em 1.2em;
+#sub dl dt {
+  width: 20%;
+  text-align: left;
+  padding-left: 1.3em;
+  background-image: url("img/pow-solid2.svg");
+  background-repeat: no-repeat;
+  background-position: left 5px;
+  background-size: 1.2em 1.2em;
 }
-
-#sub dl dd{
-     width: 75%;
-  margin-bottom:5px;
-    text-align: left;
+#sub dl dd {
+  width: 75%;
+  margin-bottom: 5px;
+  text-align: left;
 }
-.works_img{
-    width:300px;
-     margin:10px auto;
+.works_img {
+  width: 300px;
+  margin: 10px auto;
 }
-.works_img_x{
-    width:500px;
-     margin:10px auto;
+.works_img_x {
+  width: 500px;
+  margin: 10px auto;
 }
-.works_img_y{
-    width:300px;
-     margin:10px auto;
+.works_img_y {
+  width: 300px;
+  margin: 10px auto;
 }
-#sub p img{
-    width:100%;
-    height: auto;
+#sub p img {
+  width: 100%;
+  height: auto;
 }
 #sub .pagelink {
   font-size: 18px;
   text-align: center;
   margin-top: 10px;
 }
-#sub .pagelink a{
+#sub .pagelink a {
   text-decoration: none;
   padding-left: 25px;
   background-image: url(img/125_arr_hoso.png);
@@ -524,186 +468,209 @@ Resources
   background-repeat: no-repeat;
   background-size: 19px 19px;
 }
-#sub .pagelink a:hover{
-    color: #000;
-    transition: 0.3s;
+#sub .pagelink a:hover {
+  color: #000;
+  transition: 0.3s;
   text-decoration: underline;
-
 }
-
 #sub .aisatsu {
-	text-align: center;
-margin:30px 0 30px;
+  text-align: center;
+  margin: 30px 0 30px;
 }
 .profile1 .plo1_text p {
-	text-align: left;
+  text-align: left;
 }
-
-
-#sub .box{
-	margin-bottom: 60px;
-	position: relative;
-	padding: 30px;
-	border-top: solid 2px #969494;
-	border-bottom: solid 2px #969494;
-	text-align: center;
-	background-color: rgba(255,255,255,0.83);
+#sub .box {
+  margin-bottom: 60px;
+  position: relative;
+  padding: 30px;
+  border-top: solid 2px #969494;
+  border-bottom: solid 2px #969494;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.83);
 }
-.box:before, .box:after{
-    content: '';
-    position: absolute;
-    top: -10px;
-    width: 2px;
-    height: calc(100% + 20px);
-    background-color: #969494;
+.box:before, .box:after {
+  content: '';
+  position: absolute;
+  top: -10px;
+  width: 2px;
+  height: calc(100% + 20px);
+  background-color: #969494;
 }
-.box::before {left: 10px;}
-.box::after {right: 10px;}
-
-
-
+.box::before {
+  left: 10px;
+}
+.box::after {
+  right: 10px;
+}
 /*フェードイン*/
-.inview{
+.inview {
   opacity: 0;
-  transform:translateY(100px);
+  transform: translateY(100px);
   transition: 0.8s;
 }
-.inview.fade-in{
+.inview.fade-in {
   opacity: 1;
   transform: translateY(0);
 }
 .profile2 div figure {
-	max-width: 200px;
-	margin: 30px auto;
-
+  max-width: 200px;
+  margin: 30px auto;
 }
-#illust{
-	margin-top:10px;
+#illust {
+  margin-top: 10px;
 }
 .profile2 div figure img {
-	width: 100%;
-	height: auto;
-	
+  width: 100%;
+  height: auto;
+}
+#sub h4 {
+  margin: 0;
+  font-size: 16px;
+}
+h3 span {
+  white-space: nowrap;
+}
+.profile2 {
+	position: relative;
 }
 
+.animation{
+  display: block;
+  max-width: 350px;
+  width: 70%;
+  height: auto;
+}
 
-
-
-@media (max-width:900px){
-main{
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 0;
+.animation {
+  animation: floating-y 0.8s ease-in-out infinite alternate-reverse;
+}
+@keyframes floating-y {
+  0% {
+    transform: translateY(-2%);
   }
-.top_img {
+  100% {
+    transform: translateY(2%);
+  }
+}
+
+@media (max-width:900px) {
+  main {
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 0;
+  }
+  .top_img {
     width: 90%;
     min-width: 200px;
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 0;
-}
-
-  .profile1,.profile2{
-  display: block;
-    text-align: center;
-}
-  .plo1_text{
-  width: 100%;
-  margin-top: 30px;
-  font-size: 16px;
-}
-.profile2 div{
-  width: 90%;
-  margin: 0 auto;
-}
-  
-nav {
-  width: 65%;
-  position: fixed;
-  top: 0;
-  height: 40vh;
-  background-color: rgba(255,255,255,1.00); 
-  padding-top: 60px;
-left:100%;
-  transition: 0.5s;
-}
-  .nav-open nav{
-    left:35%;
   }
-header nav ul {
-flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
- font-size: 25px;
-  height: 100%;
-  background-color: rgba(255,255,255,1.00);
-  overflow: auto;
-     padding-bottom: 10px;
-		border-bottom-left-radius:  30px;
- 
-}
-nav li a {
+  .profile1, .profile2 {
+    display: block;
+    text-align: center;
+  }
+  .plo1_text {
+    width: 100%;
+    margin-top: 30px;
+    font-size: 16px;
+  }
+  .profile2 div {
+    width: 90%;
+    margin: 0 auto;
+  }
+  nav {
+	width: 250px;
+	position: fixed;
+	top: 0;
+	  right: -1000px;
+	      margin-right: 0px;
+	height: 40vh;
+	background-color: rgba(255, 255, 255, 1.00);
+	padding-top: 60px;
+	transition: 0.5s;
+	border-top-left-radius: 30px;
+	border-bottom-left-radius: 30px;
+  }
+  .nav-open nav {
+	  
+  right: 0;
+  }
+  header nav ul {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 25px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 1.00);
+    overflow: auto;
+    padding-bottom: 10px;
+    border-bottom-left-radius: 30px;
+  }
+  nav li a {
     padding: 30px;
-   color: #000000;
-}
-nav li::after {
+    color: #000000;
+  }
+  nav li::after {
     content: none;
-}
-  .nav-button{
+  }
+  .nav-button {
     visibility: visible;
     opacity: 1;
-      margin-right:8px;
-
+    margin-right: 8px;
   }
-
-.view {
+  .view {
     padding-bottom: 30px;
-}
-
-
-}
-
-@media (max-width:600px){
- #pagetop
-  {
-  opacity: 0;
-    visibility: hidden;
-}
-.works_img_x {
-  width: 100%;
-}
-#sub dl {
-  margin: 0;
-     display: block;
-  text-align: center;
-}
-#sub dl dt{
-  width: 20%;
-  padding-left: 1.3em;
-  text-align: center;
-  white-space: nowrap;
-}
-
-#sub dl dd{
-     width: 100%;
-  margin-bottom:5px;
-    text-align: center;
-}
-  #sub dl dd:last-of-type{
-       text-align: left;
   }
-	.view{
-	text-align: center;
-	margin-top: 0px;
+.works_img_x {
+	width: 100%;
 }
-	.view a{
-				padding: 20px 40px;
-		margin-right: 0;
-	}
-	.sec_port ul:last-of-type{
+}
 
+@media (max-width:600px) {
+  #pagetop {
+    opacity: 0;
+    visibility: hidden;
+  }
+  .works_img_x {
+    width: 100%;
+  }
+  .works_img {
+	width: 80%;
+  }
+  #sub dl {
+    margin: 0;
+    display: block;
+    text-align: center;
+  }
+  #sub dl dt {
+    width: 20%;
+    padding-left: 1.3em;
+    text-align: center;
+    white-space: nowrap;
+  }
+  #sub dl dd {
+    width: 100%;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+  #sub dl dd:last-of-type {
+    text-align: left;
+  }
+  .view {
+    text-align: center;
+    margin-top: 0px;
+  }
+  .view a {
+    padding: 20px 40px;
+    margin-right: 0;
+  }
+  .sec_port ul:last-of-type {
     margin-bottom: 0px;
-}
-  
+  }
+  .works_img_y {
+	width: 65%;
+  }
 }
