--- a/style.css
+++ b/style.css
@@ -143,7 +143,6 @@ ul {
   z-index: 2;
   visibility: hidden;
   opacity: 0;
-  background-color: rgba(255, 255, 255, 1.00);
 }
 .nav-button span:nth-child(1) {
   width: 35px;
@@ -236,16 +235,17 @@ ul {
   margin: 50px;
 }
 .view {
-  text-align: right;
+  text-align: center;
   font-size: 22px;
   margin-top: -30px;
+    
 }
 .view a {
   color: rgba(0, 0, 0, 1.00);
-  padding: 10px 20px;
+  padding: 10px 50px;
   display: inline-block;
   font-size: 20px;
-  margin-right: 70px;
+    background-color: #fff;
   text-decoration: none;
   border-radius: 30px;
   transition: 0.4s;
@@ -289,20 +289,21 @@ nav a::before {
   transform: scale(1.04);
 }
 .pagetop {
-  background-color: #F2C2C2;
+  background-color: #fff;
   border-radius: 50% 30% 30% 60%;
+border: 2px solid rgba(78,78,78,1.00);
   padding: 30px;
   position: fixed;
   right: 20px;
   bottom: 10px;
   display: none;
-  opacity: 0.8;
   transition: 0.5s;
-  color: #fff;
+  color: rgba(78,78,78,1.00);
+    font-weight: 700;
+    font-size: 20px;
   text-decoration: none;
 }
 .pagetop:hover {
-  opacity: 1;
   transform: rotateY(360deg);
 }
 footer {
@@ -333,7 +334,7 @@ h1 a {
   list-style: none;
   width: 20px;
   height: 20px;
-  background: #f2c2c2;
+  background:rgba(62,110,140,0.61);
   animation: animate 25s linear infinite;
   bottom: -150px;
 }
@@ -608,21 +609,23 @@ main .to-site a {
     width: 90%;
     margin: 0 auto;
   }
-  nav {
-    width: 250px;
-    position: fixed;
-    top: 0;
-    right: -1000px;
-    margin-right: 0px;
-    height: 40vh;
-    background-color: rgba(255, 255, 255, 1.00);
-    padding-top: 60px;
-    transition: 0.5s;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-  }
+    nav {
+        width: 70%;
+        position: fixed;
+        top: 0;
+        right: -1000px;
+        margin-right: 0px;
+        height: 40vh;
+        background-color: rgba(255, 255, 255, 1.00);
+        padding-top: 60px;
+        transition: 0.6s;
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+            border: 1px solid #000;
+        border-right:none;
+	}
   .nav-open .nav-button {
-    right: -30px;
+    right: -20px;
   }
   .nav-open nav {
     right: 0;
@@ -632,7 +635,7 @@ main .to-site a {
     justify-content: space-around;
     align-items: center;
     font-size: 25px;
-    height: 100%;
+   height: 95%;
     background-color: rgba(255, 255, 255, 1.00);
     overflow: auto;
     padding-bottom: 10px;
@@ -666,6 +669,9 @@ main .to-site a {
 	div iframe{
 		padding: 20px;
 	}
+.thanks a {
+    white-space: nowrap;
+}
 }
 @media (max-width:600px) {
   #pagetop {
