--- a/style.css
+++ b/style.css
@@ -98,12 +98,14 @@ nav {
 }
 .tools {
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.64);
+  background-color:  rgb(223 223 223 / 64%);
   border-radius: 20px;
+    margin-top: 1em;
+    padding:0.5em;
 }
 .profile2 div p {
-  margin-bottom: 15px;
-  height: 130px;
+    margin-bottom: 15px;
+    height: 150px;
 }
 header nav ul {
   display: flex;
@@ -172,7 +174,6 @@ ul {
 .top_img {
   width: 30%;
   max-width: 350px;
-  margin-top: 40px;
 	    display: flex;
     align-items: center;
 }
@@ -191,9 +192,13 @@ ul {
 }
 .pro1_text {
   width: 50%;
-  margin-top: 50px;
   text-align: center;
   font-size: 18px;
+}
+.profile1,.profile2{
+    padding:15px 15px 30px;
+    background-color: #fff;
+    border-radius: 20px;
 }
 .profile2 div {
   width: 30%;
