--- a/style.css
+++ b/style.css
@@ -410,6 +410,23 @@ h1 a {
   animation-duration: 11s;
   background: #fff;
 }
+a.my-button {
+	display: block;
+	text-align: center;
+	vertical-align: middle;
+	text-decoration: none;
+	width: 120px;
+	margin: 1em auto;
+	padding: 10px 40px;
+	border: 2px solid #3E6E8C;
+	transition: 0.5s;
+    border-radius: 10px;
+    color: rgba(0, 0, 0, 1.00);
+}
+a.my-button:hover {
+	color: #fff;
+	background: #3E6E8C;
+}
 @keyframes animate {
   0% {
     transform: translateY(0) rotate(0deg);
