--- a/style.css
+++ b/style.css
@@ -246,15 +246,15 @@ ul {
     
 }
 .view a {
-  color: rgba(0, 0, 0, 1.00);
-  padding: 10px 50px;
-  display: inline-block;
-  font-size: 20px;
+color: rgba(0, 0, 0, 1.00);
+    padding: 15px 140px;
+    display: inline-block;
+    font-size: 23px;
     background-color: #fff;
-  text-decoration: none;
-  border-radius: 30px;
-  transition: 0.4s;
-  border: 2px solid #3E6E8C;
+    text-decoration: none;
+    border-radius: 20px;
+    transition: 0.4s;
+    border: 2px solid #3E6E8C;
 }
 h1 a figure {
   width: 40px;
@@ -416,7 +416,7 @@ a.my-button {
 	vertical-align: middle;
 	text-decoration: none;
 	width: 120px;
-	margin: 1em auto;
+	margin: 4em auto 1em;
 	padding: 10px 40px;
 	border: 2px solid #3E6E8C;
 	transition: 0.5s;
